feat: update for quick app

--- a/source/components/DatePickerItem/index.scss
+++ b/source/components/DatePickerItem/index.scss
@@ -13,7 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  margin: 0 auto;
+  // margin: 0 auto;
   z-index: 3;
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6)), -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6)), linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
