fix: style error in quick app

--- a/source/pages/demo/switch/index.scss
+++ b/source/pages/demo/switch/index.scss
@@ -1,3 +1,5 @@
+@import '../../../common/style/common.scss';
+
 .progress-demo {
   flex-direction: column;
 }
@@ -8,10 +10,4 @@
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 40px;
-}
-
-.col {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
 }
