--- a/source/pages/demo/button/index.scss
+++ b/source/pages/demo/button/index.scss
@@ -1,20 +1,9 @@
+@import '../../../common/style/common.scss';
+
 .button-wrapper {
     button {
         margin-bottom: 20px;
     }
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.col {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
 }
 
 .item {
