--- a/source/pages/demo/picker/index.scss
+++ b/source/pages/demo/picker/index.scss
@@ -1,12 +1,1 @@
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.anu-block {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  width: 100%;
-}
+@import '../../../common/style/common.scss';
