--- a/source/pages/demo/slider/index.scss
+++ b/source/pages/demo/slider/index.scss
@@ -1,10 +1,1 @@
-.anu-block {
-  display:flex;
-  flex-direction: column;
-  flex:1;
-  width: 100%;
-}
-
-.slider {
-  width: 100%;
-}
+@import '../../../common/style/common.scss';
