--- a/source/components/Switch/index.scss
+++ b/source/components/Switch/index.scss
@@ -28,17 +28,7 @@
     opacity: 0.5;
   }
   &__thumb {
-    margin: 2px;
     position: absolute;
-  }
-  &__thumb--open {
-    animation-name: open;
-    animation-duration: 200ms;
-    animation-fill-mode: forwards;
-  }
-  &__thumb--close {
-    animation-name: close;
-    animation-duration: 200ms;
-    animation-fill-mode: forwards;
+    transition: transform .3s;
   }
 }
