--- a/source/components/Checkbox/index.scss
+++ b/source/components/Checkbox/index.scss
@@ -1,5 +1,6 @@
 .checkbox-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -7,6 +8,7 @@
     border-radius:4px;
     border: 1px solid #d1d1d1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
