--- a/source/components/AnuRadio/index.scss
+++ b/source/components/AnuRadio/index.scss
@@ -1,10 +1,10 @@
-.nnc-radio-container {
+.anu-radio-container {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.nnc-radio {
+.anu-radio {
     border-width: 2px;
     border-style: solid;
     display: flex;
@@ -13,6 +13,6 @@
     align-items: center;
 }
 
-.nnc-radio__check {
+.anu-radio__check {
     // border-radius: 50%;
 }
