--- a/source/components/XButton/index.scss
+++ b/source/components/XButton/index.scss
@@ -1,9 +1,4 @@
-.center {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
-}
+@import '../../common/style/common.scss';
 
 .button {
   width: 100%;
@@ -15,7 +10,7 @@
   overflow: hidden;
   border: 1px solid #eee;
   background-color: #f8f8f8;
-  
+
 }
 
 .active {
@@ -53,7 +48,7 @@
 }
 
 .default-disabled-plain, .primary-disabled-plain, .warn-disabled-plain  {
- 
+
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: transparent;
 }
