--- a/source/common/style/common.scss
+++ b/source/common/style/common.scss
@@ -3,14 +3,15 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
-
 .col {
   display: flex;
   flex-direction: column;
   flex: 1;
-  width: 100%;
 }
 
 .center {
+  justify-content: center;
+}
+.vertical {
   align-items: center;
 }
