--- a/source/components/XButton/index.scss
+++ b/source/components/XButton/index.scss
@@ -10,12 +10,9 @@
   overflow: hidden;
   border: 1px solid #eee;
   background-color: #f8f8f8;
-
-}
-
-.active {
-  // background-color: red;
-  opacity:0.6;
+  &:active {
+    opacity: .6;
+  }
 }
 
 .default {
