feat: new button and new demo style

--- a/source/components/XButton/index.scss
+++ b/source/components/XButton/index.scss
@@ -1,23 +1,39 @@
 @import '../../common/style/common.scss';
 
 .button {
-  width: 100%;
-  padding: 14px;
-  box-sizing: border-box;
-  line-height: 2.55555556;
-  border-radius: 5px;
   -webkit-tap-highlight-color: transparent;
   overflow: hidden;
-  border: 1px solid #eee;
+  border: 2px solid #eee;
   background-color: #f8f8f8;
-  &:active {
-    opacity: .6;
-  }
 }
+
+.mask {
+  width: 100%;
+  display: flex;
+  opacity: 0.1;
+}
+
 
 .default {
   background-color: #f8f8f8;
 }
+.primary {
+  background-color: #1aad19;
+}
+.warn {
+  background-color: #e64340;
+}
+.default-active{
+  background-color: darken(#f8f8f8,50%);
+}
+.primary-active{
+  background-color: lighten(#1aad19,50%);
+}
+.warn-active{
+  background-color: saturate(#e64340,70%);
+}
+
+
 .default-disabled {
   background-color: #f7f7f7;
 }
@@ -45,7 +61,6 @@
 }
 
 .default-disabled-plain, .primary-disabled-plain, .warn-disabled-plain  {
-
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: transparent;
 }
@@ -56,13 +71,4 @@
 
 .mini {
   padding:0 5px;
-
-}
-
-.primary {
-  background-color: #1aad19;
-}
-
-.warn {
-  background-color: #e64340;
 }
