--- a/source/common/style/common.scss
+++ b/source/common/style/common.scss
@@ -12,27 +12,6 @@
 .anu-center {
   justify-content: center;
 }
-.anu-vertical {
+.anu-middle {
   align-items: center;
-}
-
-.anu-item {
-  padding: 10px 5px;
-  background-color: #eee;
-  margin: 2px 0px;
-  text {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-}
-
-.anu-header {
-  margin: 10px 0px;
-  font-weight: bold;
-  text {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
 }
