--- a/source/pages/index/index.scss
+++ b/source/pages/index/index.scss
@@ -1,12 +1,9 @@
 @import '../../common/style/common.scss';
+@import '../demo/common/index.scss';
 
-.anu-item {
-    padding: 10px 20px;
-    background-color: #eee;
-    margin: 2px 0px;
-    text {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
+.test {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  transform: translate(100px, 100px);
 }
