--- a/source/pages/demo/swiper/index.scss
+++ b/source/pages/demo/swiper/index.scss
@@ -20,3 +20,10 @@
     width: 100%;
     height: 100%;
 }
+
+.aaa {
+    background-color: blue;
+    width: 140px;
+    height: 90px;
+    transform: translate(100px, -100px);
+}
