update XLabel、XCheckbox、XRadio demo && fix eslint

--- a/source/pages/demo/label/index.scss
+++ b/source/pages/demo/label/index.scss
@@ -1,4 +1,9 @@
-.col {
+@import '../../../common/style/common.scss';
+@import '../common/index.scss';
+
+.flex {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
