update XLabel、XRadio、XCheckbox demo

--- a/source/pages/demo/checkbox/index.scss
+++ b/source/pages/demo/checkbox/index.scss
@@ -1,6 +1,9 @@
 @import '../../../common/style/common.scss';
 @import '../common/index.scss';
 
-.red {
-    background-color: red;
+.checkbox-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
 }
