--- a/source/pages/demo/radio/index.scss
+++ b/source/pages/demo/radio/index.scss
@@ -1,2 +1,9 @@
 @import '../../../common/style/common.scss';
 @import '../common/index.scss';
+
+.radio-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
