XLabel、XCheckbox、XRadio demo 适配快应用

--- a/source/pages/demo/checkbox/index.scss
+++ b/source/pages/demo/checkbox/index.scss
@@ -7,3 +7,8 @@
     align-items: center;
     justify-content: flex-start;
 }
+
+.checkbox-col {
+    display: flex;
+    flex-direction: column;
+}
