--- a/source/pages/demo/radio/index.scss
+++ b/source/pages/demo/radio/index.scss
@@ -7,3 +7,9 @@
     align-items: center;
     justify-content: flex-start;
 }
+
+.radio-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
