--- a/source/components/XButton/index.scss
+++ b/source/components/XButton/index.scss
@@ -3,14 +3,17 @@
 .anu-button {
   -webkit-tap-highlight-color: transparent;
   overflow: hidden;
-  border: 2px solid #eee;
-  background-color: #f8f8f8;
+  border: 1px solid transparent;
+  border-radius: 6px;
 }
 
 .anu-button__mask {
+  position:absolute;
+  flex-direction: row;
   width: 100%;
+  flex: 1;
   display: flex;
-  opacity: 0.1;
+  opacity: 0;
 }
 
 .anu-button__loading {
