--- a/source/pages/demo/picker1/index.scss
+++ b/source/pages/demo/picker1/index.scss
@@ -14,7 +14,7 @@
 
 .item-li {
   background-color: #ffffff;
-  flex-direction: row;
+  flex-direction: column;
   border-color: #dddddd;
   border-bottom-width: 1px;
   align-items: center;
