--- a/source/components/XSlider/index.scss
+++ b/source/components/XSlider/index.scss
@@ -1,58 +1,53 @@
 .anu-slider {
-  display:flex;
-align-items:center;
-flex-direction:row;
-
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .anu-bar-container {
-  height: 28px;
-  width: 100%;
+    height: 30px;
+    width: 100%;
 }
 
 .slider-block {
-  height: 28px;
-  display: flex;
-  flex-direction: row;
+    height: 28px;
+    display: flex;
+    flex-direction: row;
 }
 
 .anu-slider-block {
-  padding: 15px 0;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  position: absolute;
-  width: 100%;
+    padding: 15px 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: absolute;
+    width: 100%;
 }
 
 .weui-slider__inner {
-  position: relative;
-  height: 2px;
-  background-color: #e9e9e9;
-  width: 100%;
+    position: relative;
+    height: 2px;
+    width: 100%;
 }
 
 .weui-slider__track {
-  height: 2px;
-  background-color: #1aad19;
-  width: 0;
+    height: 2px;
+}
+
+.weui-slider__track-inner {
+    height: 2px;
 }
 
 .weui-slider__handler {
-  width: 28px;
-  height: 28px;
-  margin-left: -14px;
-  margin-top: -14px;
-  border-radius: 14px;
-  background-color: #ffffff;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+    justify-content: center;
+    align-items: center;
 }
 
 .weui-slider-box__value {
-  margin-left: 0.5em;
-  min-width: 24px;
-  color: #888888;
-  text-align: center;
-  font-size: 14px;
+    margin-left: 0.5em;
+    flex-basis: 40px;
+    color: #888888;
+    text-align: center;
+    font-size: 14px;
 }
