--- a/source/pages/demo/picker1/index.scss
+++ b/source/pages/demo/picker1/index.scss
@@ -1,6 +1,7 @@
 .picker-demo {
   flex-direction: column;
   background-color: #f5f5f5;
+  flex: 1
 }
 
 .picker-title {
@@ -35,7 +36,7 @@
   width: 10px;
   margin-left: 10px;
   margin-right: 15px;
-  resize-mode: contain;
+ 
 }
 
 .select-area {
