--- a/source/components/XSwiper/index.scss
+++ b/source/components/XSwiper/index.scss
@@ -15,6 +15,7 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
+    transition-property: none;
 }
 
 .anu-swiper__content--transition {
