--- a/source/components/XPickerItem/index.scss
+++ b/source/components/XPickerItem/index.scss
@@ -1,138 +1,54 @@
-
-
-.weui-picker {
-  position: fixed;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 5000;
-  flex-direction: column;
-  height: 450px;
-  // -webkit-backface-visibility: hidden;
-  // backface-visibility: hidden;
-  // -webkit-transform: translate(0, 100%);
-  // -ms-transform: translate(0, 100%);
-  // transform: translate(0, 100%);
-  // -webkit-transition: -webkit-transform .3s;
-  // transition: -webkit-transform .3s;
-  // transition: transform .3s;
-  // transition: transform .3s, -webkit-transform .3s;
-  // display: flex;
-  // flex-direction: column;
-}
-
-.weui-picker__hd {
-  // display: -webkit-box;
-  // display: -webkit-flex;
-  // display: -ms-flexbox;
-  // display: flex;
-  // // position: fixed;
-  // // left: 0;
-
-  // flex: 1;
-  padding: 9px 15px;
-  background-color: #fff;
-  position: relative;
-  align-items: center;
-  font-size: 17px;
-  height: 42px;
-  border-bottom: 1px solid #eeeeee;
-  width: 100%;
-    justify-content: space-between;
-}
-
-.weui-picker__bd {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
+.anu-picker_content {
   display: flex;
-  // position: fixed;
-  // left: 0;
-  // bottom: 0;
-
-  position: relative;
-  background-color: #fff;
-  height: 238px;
+  flex-direction: column;
   width: 100%;
+  align-items: center;
+  // height: 238px;
   overflow: hidden;
+}
+
+.anu-picker__item {
+  height: 34px;
+  align-items: center;
+  display: flex;
   justify-content: center;
+  flex-direction: row;
+  font-size: 12px;
 }
 
-.weui-picker__action_0 {
- text {
-  color: #888;
- }
-  
-}
-
-.weui-picker__action_1 {
-  justify-content: flex-end;
-  text {
-    color: #1AAD19;
-  }
-  
-}
-
-.weui-picker__action {
-  display: block;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  
-}
-
-.weui-picker__hd:after {
-  content: " ";
+.anu-picker__mask {
   position: absolute;
+  top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  height: 1px;
-  border-bottom: 1px solid #E5E5E5;
-  color: #E5E5E5;
-  -webkit-transform-origin: 0 100%;
-  -ms-transform-origin: 0 100%;
-  transform-origin: 0 100%;
-  -webkit-transform: scaleY(0.5);
-  -ms-transform: scaleY(0.5);
-  transform: scaleY(0.5);
+  width: 100%;
+  height: 100%;
+  // margin: 0 auto;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
 }
 
-.weui-animate-slide-up {
-  -webkit-animation: slideUp ease .3s forwards;
-  animation: slideUp ease .3s forwards;
+.anu-picker__mask_top {
+  width: 100%;
+  height: 102px;
+  border-bottom: 1px solid #eeeeee;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
 }
 
-
-@keyframes slideUp {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
+.anu-picker__mask_bottom {
+  width: 100%;
+  flex: 1;
+  border-top: 1px solid #eeeeee;
+  background:linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
 }
 
-.weui-animate-slide-down {
-  -webkit-animation: slideDown ease .3s forwards;
-  animation: slideDown ease .3s forwards;
+.anu-stack {
+  position: relative;
+  overflow: hidden;
+  height:100%;
+
 }
 
-@keyframes slideDown {
-  100% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
+.anu-picker__mask_center {
+  height: 34px;
 }
-
-
