--- a/source/pages/demo/picker/index.scss
+++ b/source/pages/demo/picker/index.scss
@@ -1,12 +1,48 @@
-@import '../../../common/style/common.scss';
+.picker-demo {
+  flex-direction: column;
+  background-color: #f5f5f5;
+  flex: 1
+}
 
-.anu-item {
-  padding: 10px 20px;
-  background-color: #eee;
-  margin: 2px 0px;
-  text {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
+.picker-title {
+  margin: 15px;
+}
+
+.title-text {
+  font-size: 32px;
+  color: #333333;
+}
+
+.item-li {
+  background-color: #ffffff;
+  flex-direction: column;
+  border-color: #dddddd;
+  border-bottom-width: 1px;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+
+.item-li-detail {
+  color: #333333;
+  flex: 1;
+  font-size: 14px;
+  margin-left: 15px;
+}
+
+.item_arrow_img {
+  height: 10px;
+  width: 10px;
+  margin-left: 10px;
+  margin-right: 15px;
+ 
+}
+
+.select-area {
+  align-items: center;
+}
+
+.item-name {
+  color: #999999;
 }
