Move common style to assets folder

--- a/source/components/XCheckbox/index.scss
+++ b/source/components/XCheckbox/index.scss
@@ -1,4 +1,4 @@
-@import '../../common/style/iconfont.scss';
+@import '../../assets/style/iconfont.scss';
 
 .checkbox-container {
     display: flex;
