--- a/source/pages/demo/label/index.scss
+++ b/source/pages/demo/label/index.scss
@@ -1,4 +1,4 @@
-@import '../../../common/style/common.scss';
+@import '../../../assets/style/common.scss';
 @import '../common/index.scss';
 
 .label-content {
