--- a/source/assets/style/iconfont.scss
+++ b/source/assets/style/iconfont.scss
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: iconfont;
+    font-family: 'iconfont';
     src: url("https://ss.qunarzz.com/yo/font/1.0.3/yofont.ttf");
 }
 
 .iconfont {
-    font-family: iconfont;
+    font-family: 'iconfont';
 }
 
 .iconfont-another {
-    font-family: iconfont;
+    font-family: 'iconfont';
 }
