--- a/source/pages/index/index.scss
+++ b/source/pages/index/index.scss
@@ -1,4 +1,4 @@
-@import '../../common/style/common.scss';
+@import '../../assets/style/common.scss';
 @import '../demo/common/index.scss';
 
 .test {
