--- a/components/Label.html
+++ b/components/Label.html
@@ -32,6 +32,7 @@
 </tr>
 </tbody>
 </table>
+<p><img style="max-height: 500px" src="/assets/images/components/icon.png"></p>
 <p>用来改进表单组件的可用性，有两种使用方式：</p>
 <ol>
 <li>使用 <code>for</code> 属性找到对应的 <code>id</code></li>
