--- a/components/Slider.html
+++ b/components/Slider.html
@@ -140,6 +140,7 @@
 </tr>
 </tbody>
 </table>
+<p><img style="max-height: 500px" src="/assets/images/components/slider.png"></p>
 <h2 id="示例">示例</h2>
 <p>基本用法：</p>
 <pre><code class="language-js"><span class="token keyword">import</span> React <span class="token keyword">from</span> <span class="token string">'@react'</span><span class="token punctuation">;</span>
