--- a/components/Checkbox.html
+++ b/components/Checkbox.html
@@ -128,7 +128,7 @@
 </tr>
 </tbody>
 </table>
-<p><img style="max-height: 500px" src="/assets/images/components/checkbox.png"></p>
+<p><img style="max-height: 500px" src="../assets/images/components/checkbox.png"></p>
 <h2 id="示例">示例</h2>
 <p>基本用法：</p>
 <pre><code class="language-js"><span class="token keyword">import</span> React <span class="token keyword">from</span> <span class="token string">'@react'</span><span class="token punctuation">;</span>
