--- a/components/Icon.html
+++ b/components/Icon.html
@@ -54,7 +54,7 @@
 </tr>
 </tbody>
 </table>
-<p><img style="max-height: 500px" src="/assets/images/components/icon.png"></p>
+<p><img style="max-height: 500px" src="../assets/images/components/icon.png"></p>
 <h2 id="示例">示例</h2>
 <pre><code class="language-scss"><span class="token comment">// assets/style/iconfont.scss</span>
 <span class="token atrule"><span class="token rule">@font-face</span></span> <span class="token punctuation">{</span>
