--- a/components/Button.html
+++ b/components/Button.html
@@ -120,7 +120,7 @@
 </tr>
 </tbody>
 </table>
-<p><img style="max-height: 500px" src="/assets/images/components/button.png"></p>
+<p><img style="max-height: 500px" src="../assets/images/components/button.png"></p>
 <h2 id="示例">示例</h2>
 <p>基本使用：</p>
 <pre><code class="language-js"><span class="token keyword">import</span> React <span class="token keyword">from</span> <span class="token string">'@react'</span><span class="token punctuation">;</span>
