--- a/components/Switch.html
+++ b/components/Switch.html
@@ -120,7 +120,7 @@
 <p>Disabled：</p>
 <pre><code class="language-js"><span class="token operator">&lt;</span>XSwitch checked<span class="token operator">=</span><span class="token punctuation">{</span><span class="token boolean">false</span><span class="token punctuation">}</span> disabled<span class="token operator">=</span><span class="token punctuation">{</span><span class="token boolean">true</span><span class="token punctuation">}</span> onChange<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>change<span class="token punctuation">.</span><span class="token function">bind</span><span class="token punctuation">(</span><span class="token keyword">this</span><span class="token punctuation">)</span><span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">></span>
 </code></pre>
-<p>自定义样式：</p>
+<p>自定义样式+：</p>
 <pre><code class="language-js"><span class="token keyword">import</span> React <span class="token keyword">from</span> <span class="token string">'@react'</span><span class="token punctuation">;</span>
 <span class="token keyword">import</span> XSwitch <span class="token keyword">from</span> <span class="token string">'@components/XSwitch/index'</span><span class="token punctuation">;</span>
 <span class="token keyword">class</span> <span class="token class-name">P</span> <span class="token keyword">extends</span> <span class="token class-name">React<span class="token punctuation">.</span>Component</span> <span class="token punctuation">{</span>
