fix: 修改团队来源

--- a/doc/styles/index.css
+++ b/doc/styles/index.css
@@ -75,7 +75,7 @@
     justify-content: center;
 }
 .instructions .i{
-    padding: 0 50px;
+    padding: 0 5%;
 }
 .instructions .i .text{
     margin: 37px 0 120px 0;
