--- a/styles/index.css
+++ b/styles/index.css
@@ -24,7 +24,6 @@
 }
 .banner .text{
     padding: 16px 0 64px 0;
-    width:458px;
     height:33px;
     font-size:24px;
     font-family:PingFangSC-Regular;
@@ -137,4 +136,47 @@
     top: 16px;
     transform: translate(-50%, -50%);
     font-size: 18px;
+}
+
+@media only screen and (max-width: 600px) {
+    .wh{
+        width: 90%;
+        height: 24px;
+    }
+    .banner{
+        background: none;
+        padding-left: 8%;
+        padding-top: 5%;
+        margin-top: 0;
+        overflow: hidden;
+        height: 280px;
+    }
+    .banner h1{
+        width:100%;
+        font-size:28px;
+    }
+    .banner .text{
+        margin: 0 0 15% 0;
+        line-height: 45px;
+    }
+    .instructions .i{
+        padding-left: 5%;
+        width: 50%;
+    }
+    .instructions .i .wd100{
+        width: 100%;
+        height: 110px;
+    }
+    .foot{
+        padding-top: 60px;
+    }
+    .foot .group{
+        padding-left: 3%;
+    }
+    .foot .group .title{
+        font-size:16px;
+    }
+    .foot .group .t{
+        font-size:14px;
+    }
 }
