--- a/source/pages/demo/picker/index.scss
+++ b/source/pages/demo/picker/index.scss
@@ -1,4 +1,9 @@
-@import './picker.scss';
+// @import './picker.scss';
+
+.picker-text {
+  color: red;
+}
+
 .picker-demo {
   flex-direction: column;
   background-color: #f5f5f5;
