fix: 添加节假日显示

--- a/source/components/XCalendar/index.scss
+++ b/source/components/XCalendar/index.scss
@@ -141,6 +141,7 @@ page {
     .e-month .b-row .base {
       height: 20px;
       line-height: 20px;
+      font-size: 12px;
     }
   
     .e-month .b-row .ban ,
