--- a/source/components/XButton/index.scss
+++ b/source/components/XButton/index.scss
@@ -6,6 +6,7 @@
   overflow: hidden;
   border-radius: 6px;
   position: relative;
+  line-height: 2.55555556;
 }
 
 .anu-button__mask {
@@ -111,3 +112,4 @@
 .anu-button--disabled {
   opacity: .4;
 }
+
