--- a/assets/style/variables.scss
+++ b/assets/style/variables.scss
@@ -1,10 +1,11 @@
-$main-primary-color:   #ff9800;
+// $main-primary-color:   #ff9800;
+$main-primary-color: #64AC31;
 $main-secondary-color: #00bcd4;
 
 $main-success-color:   #52c41a;
 $main-info-color:      #1890ff;
 $main-warn-color:      #fa8c16;
-$main-error-color:     #f5222d;
+$main-error-color:     #c54442;
 
 $main-gray-color:      #eee;
 
