--- a/h5/components/TitleBar/index.scss
+++ b/h5/components/TitleBar/index.scss
@@ -9,9 +9,14 @@
 .__internal__Header-title {
     flex-grow: 1;
     padding: 0 48px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* flex: 1; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* width: 200px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .__internal__Header-title {
     margin-left: 6px;
